--- a/user-console/explorer/template.yaml
+++ b/user-console/explorer/template.yaml
@@ -6,16 +6,16 @@ metadata:
   categories: 
   - Tool
   description: "FileBrowser 在指定目录中提供了一个文件管理界面，可用于上传、删除、预览、重命名和编辑您的文件。"
-  icon: "file://$APP_DIR/icons/filebrowser.svg"
+  icon: "file://$APP_DIR/filebrowser/icon.svg"
 template:
   crd:
     group: tensorstack.dev
     resource: explorers
     versions:
     - version: v1beta1
-      template: "file://$APP_DIR/manifests/filebrowser_v1beta1.yaml"
-      readme: "FileBrowser 在指定目录中提供了一个文件管理界面，可用于上传、删除、预览、重命名和编辑您的文件。"
-      note: "{{- $status := \"未就绪\" -}}{{- range .status.conditions -}}{{- if and (eq .type \"Suspended\") (eq .status \"True\") -}}{{- $status = \"暂停\" -}}{{- break -}}{{- else if and (eq .type \"Ready\") (eq .status \"True\") -}}{{- $status = \"运行中\" -}}{{- break -}}{{- end -}}{{- end -}}状态:  {{ $status }}\nPVC:  {{ .spec.storageName }}"
+      config: "file://$APP_DIR/filebrowser/config.yaml"
+      readme: "file://$APP_DIR/filebrowser/README.md"
+      note: "file://$APP_DIR/filebrowser/NOTE.txt"
       urls: 
       - name: "filebrowser"
         url: "/t9k/build-console/projects/{{ .metadata.namespace }}/explorers/{{ .metadata.name }}/filebrowser/"
@@ -38,16 +38,16 @@ metadata:
   categories: 
   - Tool
   description: "CodeServer 是一个可以通过浏览器访问的 VSCode。"
-  icon: "file://$APP_DIR/icons/codeserver.svg"
+  icon: "file://$APP_DIR/codeserver/icon.svg"
 template:
   crd:
     group: tensorstack.dev
     resource: explorers
     versions:
     - version: v1beta1
-      template: "file://$APP_DIR/manifests/codeserver_v1beta1.yaml"
-      readme: "CodeServer 是一个可以通过浏览器访问的 VSCode。"
-      note: "{{- $status := \"未就绪\" -}}{{- range .status.conditions -}}{{- if and (eq .type \"Suspended\") (eq .status \"True\") -}}{{- $status = \"暂停\" -}}{{- break -}}{{- else if and (eq .type \"Ready\") (eq .status \"True\") -}}{{- $status = \"运行中\" -}}{{- break -}}{{- end -}}{{- end -}}状态:  {{ $status }}\nPVC:  {{ .spec.storageName }}"
+      config: "file://$APP_DIR/codeserver/config.yaml"
+      readme: "file://$APP_DIR/codeserver/README.md"
+      note: "file://$APP_DIR/codeserver/NOTE.txt"
       urls: 
       - name: "codeserver"
         url: "/t9k/build-console/projects/{{ .metadata.namespace }}/explorers/{{ .metadata.name }}/codeserver/"
