--- a/user-console/terminal/template.yaml
+++ b/user-console/terminal/template.yaml
@@ -13,7 +13,7 @@ template:
     chart: "terminal"
     versions:
     - version: 0.1.1
-      template: "file://$APP_DIR/manifests/v0_1_1.yaml"
+      config: "file://$APP_DIR/configs/v0_1_1.yaml"
       urls: 
       - name: terminal
         url: /t9k/app/terminal/{{ .Release.Namespace }}/{{ .Release.Name }}/
