--- a/user-console/nextchat/chart/templates/virtualservice.yaml
+++ b/user-console/nextchat/chart/templates/virtualservice.yaml
@@ -17,6 +17,6 @@ spec:
       uri: /
     route:
     - destination:
-        host: {{ .Release.Name }}-nextchat
+        host: {{ .Release.Name }}
         port:
           number: {{ .Values.service.port }}
