--- a/user-console/nextchat/template.yaml
+++ b/user-console/nextchat/template.yaml
@@ -12,7 +12,7 @@ template:
     # repo: "https://t9k.github.io/apps/"
     chart: "nextchat"
     versions:
-    - version: 0.1.2
+    - version: 0.1.3
       urls: 
       - name: UI
         url: /t9k/app/nextchat/{{ .Release.Namespace }}/{{ .Release.Name }}/
@@ -21,7 +21,7 @@ template:
         - group: apps
           version: v1
           resource: deployments
-          name: "{{ .Release.Name }}-nextchat"
+          name: "{{ .Release.Name }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
       dependences: {}
