Update app gpt-researcher and search-with-lepton

--- a/user-console/search-with-lepton/chart/templates/virtualservice.yaml
+++ b/user-console/search-with-lepton/chart/templates/virtualservice.yaml
@@ -17,6 +17,6 @@ spec:
       uri: /
     route:
     - destination:
-        host: {{ .Release.Name }}-search-with-lepton
+        host: {{ .Release.Name }}
         port:
           number: {{ .Values.service.port }}
