--- a/user-console/ollama/chart/Chart.yaml
+++ b/user-console/ollama/chart/Chart.yaml
@@ -1,27 +1,28 @@
+apiVersion: v2
+name: ollama
+description: Get up and running with large language models locally.
+type: application
+
+version: 0.35.2
+appVersion: 0.1.43
+kubeVersion: "^1.16.0-0"
+
 annotations:
   artifacthub.io/category: ai-machine-learning
   artifacthub.io/changes: |
-    - kind: added
-      description: add support for initContainers
-    - kind: added
-      description: add annotation to service
-apiVersion: v2
-appVersion: 0.1.41
-description: Get up and running with large language models locally.
+    - kind: changed
+      description: upgrade ollama to 0.1.43
+
 home: https://ollama.ai/
 icon: https://ollama.ai/public/ollama.png
 keywords:
-- ai
-- llm
-- llama
-- mistral
-kubeVersion: ^1.16.0-0
-maintainers:
-- email: tech@outworld.fr
-  name: Outworld
-name: ollama
+  - ai
+  - llm
+  - llama
+  - mistral
 sources:
-- https://github.com/ollama/ollama
-- https://github.com/otwld/ollama-helm
-type: application
-version: 0.29.2
+  - https://github.com/ollama/ollama
+  - https://github.com/otwld/ollama-helm
+maintainers:
+  - name: Otwld
+    email: contact@otwld.com
