More detail in README.md#readinessProbe; typo error: dependences -> dependencies

--- a/user-console/label-studio/template.yaml
+++ b/user-console/label-studio/template.yaml
@@ -23,4 +23,4 @@ template:
           name: "{{ .Release.Name }}-ls-app"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
-      dependences: {}
+      dependencies: {}
