--- a/user-console/terminal/template.yaml
+++ b/user-console/terminal/template.yaml
@@ -25,4 +25,4 @@ template:
           name: terminal-{{ .Release.Name }}
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
-      dependences: {}
+      dependencies: {}
