--- a/user-console/dify/template.yaml
+++ b/user-console/dify/template.yaml
@@ -23,4 +23,4 @@ template:
       #     name: terminal-{{ .Release.Name }}
       #     currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
       #     desiredStatus: "True"
-      dependences: {}
+      dependencies: {}
