--- a/user-console/ollama/template.yaml
+++ b/user-console/ollama/template.yaml
@@ -23,3 +23,4 @@ template:
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
       dependences: {}
+dependencies
