--- a/user-console/vllm-smls/template.yaml
+++ b/user-console/vllm-smls/template.yaml
@@ -22,4 +22,4 @@ template:
           name: "{{ .Release.Name }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
-      dependences: {}
+      dependencies: {}
