--- a/.github/workflows/release-nextchat.yml
+++ b/.github/workflows/release-nextchat.yml
@@ -2,10 +2,8 @@ name: Release NextChat Helm Charts
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - "user-console/nextchat/chart/**"
+    tags:
+      - nextchat-*
 
 jobs:
   release:
