--- a/.github/workflows/release-stable-diffusion-webui-aki.yml
+++ b/.github/workflows/release-stable-diffusion-webui-aki.yml
@@ -2,10 +2,8 @@ name: Release Stable Diffusion WebUI aki Helm Charts
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - "user-console/stable-diffusion-webui-aki/chart/**"
+    tags:
+      - stable-diffusion-webui-aki
 
 jobs:
   release:
